Sun Sep 23 05:42:35 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/rdoc/options.rb (Options::check_diagram): dot -V output
	  changed. [ ruby-Bugs-11978 ], Thanks Florian Frank.

Mon Sep 17 04:47:02 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): -W should be allowed in RUBYOPT
	  environment variable.  [ruby-core:12118]

Mon Sep 17 04:31:46 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_step): fixed integer overflow.  [ruby-dev:31763]

Fri Sep  7 14:57:36 2007  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* ruby.c (rubylib_mangled_path): eliminate RSTRING_PTR
	  [ruby-dev:31679]

	* ruby.c(push_include_cygwin): ditto.

Fri Sep  7 14:32:38 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_subseq): need integer overflow check.
	  [ruby-dev:31736]

	* array.c (rb_ary_splice): ditto.  [ruby-dev:31737]

	* array.c (rb_ary_fill): ditto.  [ruby-dev:31738]

	* string.c (rb_str_splice): integer overflow for length.
	  [ruby-dev:31739]

Fri Sep  7 14:27:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (mnew): should preserve noex as safe_level.

	* eval.c (rb_call0): tighten security check condition..

Fri Sep  7 14:19:16 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (group_member): check if presents.

	* configure.in (XCFLAGS): add _GNU_SOURCE on linux.

	* file.c (group_member): use system routine if available.

Fri Sep  7 14:14:19 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* include/ruby/defines.h (flush_register_windows): call "ta 0x03"
	  even on Linux/Sparc.  [ruby-dev:31674]

Fri Sep  7 14:12:37 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_type_progid, reg_enum_key, 
	  reg_get_val, ole_wc2mb): fix the bug. Thanks, arton. 
	  [ruby-dev:31576]

Fri Sep  7 14:02:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (detach_process_watcher): should not pass the pointer