@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2007-09-23"
 #define RUBY_VERSION_CODE 185
 #define RUBY_RELEASE_CODE 20070923
-#define RUBY_PATCHLEVEL 112
+#define RUBY_PATCHLEVEL 113
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
